--- a/QuizGame/app/src/main/res/layout/activity_geography_easy.xml
+++ b/QuizGame/app/src/main/res/layout/activity_geography_easy.xml
@@ -39,7 +39,7 @@
                 android:text="Rome" />
 
             <RadioButton
-                android:id="@+id/answer1"
+                android:id="@+id/GEanswer1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Paris" />
@@ -59,7 +59,7 @@
                 android:textSize="20sp" />
 
             <RadioButton
-                android:id="@+id/answer2"
+                android:id="@+id/GEanswer2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Asia" />
@@ -91,7 +91,7 @@
                 android:textSize="20sp" />
 
             <RadioButton
-                android:id="@+id/answer3"
+                android:id="@+id/GEanswer3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nile" />
@@ -129,7 +129,7 @@
                 android:text="China" />
 
             <RadioButton
-                android:id="@+id/answer4"
+                android:id="@+id/GEanswer4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Japan" />
@@ -155,7 +155,7 @@
                 android:textSize="20sp" />
 
             <RadioButton
-                android:id="@+id/answer5"
+                android:id="@+id/GEanswer5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Mount Everest" />
