--- a/QuizGame/app/src/main/res/layout/activity_pop_culture_medium.xml
+++ b/QuizGame/app/src/main/res/layout/activity_pop_culture_medium.xml
@@ -33,7 +33,7 @@
                 android:text="Emma Watson" />
 
             <RadioButton
-                android:id="@+id/answer1"
+                android:id="@+id/PManswer1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Jennifer Lawrence" />
@@ -65,7 +65,7 @@
                 android:text="Essos" />
 
             <RadioButton
-                android:id="@+id/answer2"
+                android:id="@+id/PManswer2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Westeros" />
@@ -103,7 +103,7 @@
                 android:text="Toy Story" />
 
             <RadioButton
-                android:id="@+id/answer3"
+                android:id="@+id/PManswer3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="The Lion King" />
@@ -123,7 +123,7 @@
                 android:textSize="20sp" />
 
             <RadioButton
-                android:id="@+id/answer4"
+                android:id="@+id/PManswer4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Hogwarts School of Magic" />
@@ -161,7 +161,7 @@
                 android:text="Chris Hemsworth" />
 
             <RadioButton
-                android:id="@+id/answer5"
+                android:id="@+id/PManswer5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Robert Downey Jr." />
